<resources>
    <string name="app_name">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="book">Book</string>
    <string name="detail">DETAILS</string>
    <string name="books_written">BOOKS WRITTEN</string>
    <string name="author_name">Author Name</string>
    <string name="age">Age</string>
    <string name="born_in">Born in</string>
    <string name="about_author">About Author</string>
    <string name="save_author">SAVE Author</string>
    <string name="bar">/</string>
    <string name="book_name">Book Name</string>
    <string name="isbn_num">ISBN Number</string>
    <string name="cntnt_desc">Description Of Content</string>
    <string name="save_book">SAVE Book</string>
    <string name="by">by</string>
    <string name="isbn_">ISBN - </string>
    <string name="authors">AUTHORS</string>
    <string name="authors_small">Authors</string>
    <string name="books">BOOKS</string>
    <string name="books_small">Books</string>
    <string name="add_book">Add Book</string>
    <string name="library">Library</string>
    <string name="about">Developed By Neil</string>
    <string name="add_author">Add Author</string>
    <string name="author">Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
