<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">





    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:theme="@style/CustomToolbarStyle">

        <android.support.v7.widget.Toolbar
            android:id="@+id/authortoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"

            />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="328dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="40dp"

                        android:ems="10"
                        android:hint="@string/author_name"
                        android:inputType="text"
                        android:paddingStart="10sp"
                        android:textColor="#61000000"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="28dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText5"
                            android:layout_width="258dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30sp"
                            android:layout_marginTop="3dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:paddingStart="10sp"


                            android:hint="@string/age"
                            android:inputType="number"
                            android:paddingEnd="10sp"
                            android:textColor="#61000000"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/Spinner2"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginEnd="45dp"
                            android:layout_marginStart="35dp"

                            android:layout_weight="1" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="328dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/born_in"

                        android:inputType="text"
                        android:paddingStart="10sp"
                        android:textColor="#61000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="328dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="60dp"
                        android:ems="10"
                        android:hint="@string/about_author"
                        android:inputType="textLongMessage"

                        android:paddingStart="10sp"
                        android:textColor="#61000000"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="130sp"
                        android:background="#6379f6"
                        android:text="@string/save_author"
                        android:textColor="#ffff"
                        android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>