<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="0dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_above="@+id/borninview"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/book"
                android:padding="4dp"
                android:src="@drawable/ic_author_icon" />

            <TextView
                android:id="@+id/cardviewauthorname"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/imageView"
                android:textColor="@color/black"                 />

            <RelativeLayout
                android:id="@+id/byauthor"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardviewauthorname"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView">

                <TextView
                    android:id="@+id/ageleft"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/age"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/agecenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ageleft"
                    android:gravity="start"
                    android:textSize="13sp"
android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/agecenter"
                    android:gravity="start"
                    android:text="@string/bar"
                    android:textSize="13sp"

                    />

                <TextView
                    android:id="@+id/cardgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_toEndOf="@id/bar"
                    android:gravity="start"
                    android:textSize="13sp"

                    />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/borninview"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/byauthor"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView"

                >

                <TextView
                    android:id="@+id/byleft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/born_in"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/bornin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="8sp"
                    android:layout_toEndOf="@+id/byleft"
                    android:gravity="start"
                    android:textSize="13sp" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>


