<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="3dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_above="@id/cardviewcontent"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/book"
                android:padding="4dp"
                android:src="@drawable/ic_book_icon" />

            <TextView
                android:id="@+id/cardviewbookname"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView"

            />

            <RelativeLayout
                android:id="@+id/byauthor"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardviewbookname"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView"

                >

                <TextView
                    android:id="@+id/byleft"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/by"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/cardviewauthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/byleft"
                    android:gravity="start"
                    android:textSize="13sp"

                    />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/cardviewisbn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/byauthor"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView"


                >

                <TextView
                    android:id="@+id/isbnleft"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/isbn_"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/isbnright"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/isbnleft"
                    android:gravity="start"
                    android:textSize="13sp"


                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/cardviewcontent"
                android:layout_width="220dp"
                android:layout_height="20dp"
                android:layout_below="@id/cardviewisbn"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageView"
                android:textSize="13sp"

                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
